Update user's avatar's sizes
